--- a/src/components/scrollmagic/scrollmagic-image-sequences.component.pug
+++ b/src/components/scrollmagic/scrollmagic-image-sequences.component.pug
@@ -4,20 +4,31 @@ block meta
   title hello. scrollmagic
 
 block content
+  h1 scroll down :)
   .s100
-  #trigger
+  .section
+    .content
+      .content__headline in code we trust.
+      .content__text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+      .content__text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+      .content__text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+      .content__text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+      .content__text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+
   #imagesequence
-    img#myimg(
-      src='https://scrollmagic.io/assets/img/example_imagesequence_01.png'
-      data-images=`[
-        "https://scrollmagic.io/assets/img/example_imagesequence_01.png",
-        "https://scrollmagic.io/assets/img/example_imagesequence_02.png",
-        "https://scrollmagic.io/assets/img/example_imagesequence_03.png",
-        "https://scrollmagic.io/assets/img/example_imagesequence_04.png",
-        "https://scrollmagic.io/assets/img/example_imagesequence_05.png",
-        "https://scrollmagic.io/assets/img/example_imagesequence_06.png",
-        "https://scrollmagic.io/assets/img/example_imagesequence_07.png"
-      ]`
-    )
+      img#myimg(
+        src='https://scrollmagic.io/assets/img/example_imagesequence_01.png'
+        data-images=`[
+          "https://scrollmagic.io/assets/img/example_imagesequence_01.png",
+          "https://scrollmagic.io/assets/img/example_imagesequence_02.png",
+          "https://scrollmagic.io/assets/img/example_imagesequence_03.png",
+          "https://scrollmagic.io/assets/img/example_imagesequence_04.png",
+          "https://scrollmagic.io/assets/img/example_imagesequence_05.png",
+          "https://scrollmagic.io/assets/img/example_imagesequence_06.png",
+          "https://scrollmagic.io/assets/img/example_imagesequence_07.png"
+        ]`
+      )
+  .s100
+  .s100#s100
   .s100
 
